# VINS-FUSION-Annotation

./: README.md
config/: vins_rviz_config.rviz
config/realsense_d435i/: color_camera.yaml  lifelong_slam.yaml
vins_estimator/: CMakeLists.txt
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  projectionTwoFrameOneCamFactor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/qt_plot/: qcustomplot.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
vins_estimator/src/utility/: utility.cpp  utility.h
